Try to improve toolbar separator coloration for themed browser windows. Particularly noticeable for dark themes.

Bug: 628312
Change-Id: I16dd1634a063202c6ea1d640a1d80e5c35e8fe56